source/_css/style.css
body {
  background-color: #f8f8f2;
  font-family: 'Asap', sans-serif;
  padding: 0;
  margin: 0;
}

a {
  color: #000;
  transition: color 300ms ease;
}
a:hover {
  color: #999;
}

/* https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/ */
blockquote {
  border-left: 10px solid #eeeee0;
  font-style: italic;
  padding: 0.1em 1.2em;
  margin-left: 0;
  quotes: "\201C""\201D""\2018""\2019";
}

blockquote p:first-child:before {
  color: #ccccc0;
  content: open-quote;
  font-family: serif;
  font-size: 3em;
  font-weight: bold;-0.25em;
  line-height: 0.1em;
  margin-right: 0.2em;
  vertical-align: -0.4em;
}

blockquote cite {
  color: #999990;
}

blockquote cite:before {
  content: "- ";
}

.header, .footer {
  text-align: center;
}

.header {
  padding: 25px 0 10px;
}
.header .title {
  margin: 0 0 15px;
}
.header nav ul {
  list-style-position: outside;
  list-style-type: none;
  padding: 10px 0;
  margin: 0;
}
.header nav li {
  display: inline-block;
  padding: 0 20px;
}
.header nav a {
  font-weight: bold;
  text-decoration: none;
}

.footer {
  padding: 30px 0;
}

.title a {
  text-decoration: none;
}

.post,
.post-list{
  background: #fff;
  border-top: 8px solid #fbf52f;
  padding: 30px 0 20px;
}

.post {
  margin: 0 0 40px;
}
.post:last-child {
  margin-bottom: 0;
}
.post .post-header,
.post .content {
  margin: 0 auto;
  width: 700px;
}
.post .title {
  margin: 0;
}
.post .meta {
  color: #999;
  font-size: small;
  margin: 10px 0 25px;
}

.post-list .title {
  width: 700px;
  margin: 0 auto 10px;
}
.post-list-item {
  padding: 10px 0;
  margin: 0 auto;
  width: 700px;
}
.post-list-item:after {
  content: "";
  clear: both;
  display: block;
}
.post-list-item .date {
  float: left;
  width: 100px;
  padding-top: 5px;
}
.post-list-item .title {
  float: left;
  width: 600px;
  margin: 0;
}

.content {
  line-height: 1.6em;
}
.content img {
  max-width: 100%;
}

/* comments */
.comments {
  margin: 0 auto 3em;
  width: 700px;
}

/* code */
.hljs {
  line-height: 1.5em;
  padding: 10px 15px;
  overflow-x: scroll;
}
code {
  background-color: #f8f8f2;
  padding: 0.1em 0.2em;
}

.pagination {
  list-style-position: outside;
  list-style-type: none;
  padding: 0;
  margin: -20px auto 0px;
  width: 700px;
}
.pagination:after {
  content: "";
  clear: both;
  display: block;
}
.pagination li {
  font-weight: bold;
  width: 50%;
}
.pagination a {
  text-decoration: none;
}
.pagination .prev-page {
  float: left;
}
.pagination .prev-page a:before {
  content: "< ";
}
.pagination .next-page {
  float: right;
  text-align: right;
}
.pagination .next-page a:after {
  content: " >";
}

@media only screen and (max-width: 767px) {
  h1 {
    font-size: 24px;
  }
  .post .post-header,
  .post .content,
  .post-list .title,
  .post-list-item,
  .pagination {
    width: 90%;
  }
}

